# axum-restful

./: .env.example  Cargo.toml  docker-compose.yml  log4rs.yaml  makefile  schema.sql  script.sh
src/: main.rs
src/conf/: database.rs  jwt.rs  middleware.rs  redis_db.rs
src/controllers/: auth_controller.rs  auth_controller_impl.rs
src/docs/: auth.md
src/dto/: login_request.rs  login_response.rs  register_request.rs  web_response.rs
src/models/: user.rs
src/repositories/: auth_repository.rs  auth_repository_impl.rs
src/services/: auth_service.rs  auth_service_impl.rs
src/utils/: errors.rs  hash.rs
