[package]
name = "axum-restful"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
axum-extra = "0.10.0"
axum-test = "17.2.0"
chrono = "0.4.39"
config = "0.15.7"
http = "1.2.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "chrono", "mysql"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.86"
rust-argon2 = "2.1.0"
rand = "0.8.5"
dotenv = "0.15.0"
thiserror = "2.0.11"
env_logger = "0.11.6"
log = "0.4.25"
log4rs = "1.3.0"
hmac = "0.12.1"
sha2 = "0.10.8"
cookie = "0.18.1"
